remove password mask on active password fields

--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -71,12 +71,14 @@
     left: 0;
     display: inline-flex;
     align-items: center;
-    width: auto;
+    width: 100%;
     height: calc(100% - 1px);
     max-width: 100%;
     overflow: hidden;
     padding-right: 2px;
     background-color: $color-bg;
+    pointer-events: none;
+    z-index: 3;
 
     span {
       min-width: 10px;
