user-menu-panel rebuild

--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -188,7 +188,7 @@
         padding: 0 $container-padding-mobile;
       }
 
-      body.is-login .page.is-short & {
+      body.is-login & {
         @include screen('lg') {
           bottom: 70px;
         }
