--- a/app/components/user-menu-panel/user-menu-panel.pug
+++ b/app/components/user-menu-panel/user-menu-panel.pug
@@ -1,7 +1,5 @@
-mixin header-user()
-  +b.header-user&attributes(attributes)
-    +e.user
-      +short-profile(href="#")
+mixin user-menu-panel()
+  +b.user-menu-panel&attributes(attributes)
     +e.UL.list
       +e.LI.item
         +user-link('calendar', '_calendar', true)(href="#")
