--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -73,3 +73,4 @@ include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
 include ../components/side-navigation/side-navigation
 include ../components/ui-kit/ui-kit
+include ../components/user-menu-panel/user-menu-panel
