--- a/app/layouts/default-login.pug
+++ b/app/layouts/default-login.pug
@@ -14,7 +14,7 @@ html(lang='en')
       block popups
 
     +overlay
-    +main-menu
+    +user-menu-panel
     block panels
     +footer
     script(src='assets/scripts/libs/object-assign-auto.min.js')
