--- a/app/layouts/default.pug
+++ b/app/layouts/default.pug
@@ -14,6 +14,7 @@ html(lang='en')
       block popups
 
     +overlay
+    +user-menu-panel
     block panels
     +footer
     script(src='assets/scripts/libs/object-assign-auto.min.js')
