fixes for phone field

--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -108,13 +108,13 @@
 
   &__phone {
 
-    &_code {
+    &_code.input {
       width: 44px;
       max-width: 44px;
     }
 
-    &_number {
-      flex: 1;
+    &_number.input {
+      width: calc(100% - 44px);
       padding-left: 14px;
     }
   }
