--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -27,14 +27,14 @@ block content
                 +form-section-wrapper
                   +form-box('Country')
                     +select.js-select-input(name="country")
-                      option(value="placeholder") Country
+                      option(value="placeholder" placeholder) Country
                       option(value="uk" selected) United-Kingdom
                       option(value="ru") Russia
                       option(value="de") Germany
                       option(value="fr") France
               +col({xl: 6, lg: 12 }).grid__col_lg-order2
                 +form-section-wrapper
-                  +form-box('Phone number')._phone
+                  +form-box('Phone number', '', 'div')._phone
                     +input(type="tel" name="phone-code" value="+44" placeholder="Phone code" data-tel-code).form-box__phone_code
                     +input(type="tel" name="phone-number" value="768 968 98983" placeholder="Phone number" data-tel-number).form-box__phone_number
               +col({xl: 6, lg: 12 })
@@ -79,7 +79,7 @@ block content
                 +form-section-wrapper
                   +form-box('Residency country')
                     +select.js-select-input(name="residencyCountry")
-                      option(value="placeholder") Residency country
+                      option(value="placeholder" placeholder) Residency country
                       option(value="lv" selected) Latvia
                       option(value="ru") Russia
                       option(value="de") Germany
@@ -88,7 +88,7 @@ block content
                 +form-section-wrapper
                   +form-box('Education grade')
                     +select.js-select-input(name="educationGrade")
-                      option(value="placeholder") Education grade
+                      option(value="placeholder" placeholder) Education grade
                       option(value="bachelor" selected) Bachelor
                       option(value="doctor") Doctor
                       option(value="master") Master
