--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -71,6 +71,9 @@ include ../components/lead/lead
 include ../components/main-menu/main-menu
 include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
+include ../components/offer/offer
+include ../components/page-header/page-header
 include ../components/side-navigation/side-navigation
+include ../components/space-offer/space-offer
 include ../components/ui-kit/ui-kit
 include ../components/user-menu-panel/user-menu-panel
