--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -10,7 +10,9 @@ block content
         +link(href="ui-kit.html") UI-kit (ui-kit.html)
         +link(href="index.html") Main (index.html)
         +link(href="space.html")  One Space (space.html)
-        +link(href="account-settings.html")  Account settings (account-settings.html)
+        +link(href="account-settings.html")  Account settings(account-settings.html)
+        //- +link(href="host-spaces.html") My rental offers (HOST) (host-spaces.html)
+        //- +link(href="host-space-offers.html") My rental offers - One Space (HOST) (host-space-offers.html)
 
 block panels
   +main-menu
