--- a/app/blocks/page-title/page-title.scss
+++ b/app/blocks/page-title/page-title.scss
@@ -16,4 +16,15 @@
 
     line-height: 1.2;
   }
+
+  &_small {
+    @include heading-3;
+
+    font-weight: 700;
+    user-select: none;
+
+    @include screen('sm') {
+      @include heading-4;
+    }
+  }
 }
