--- a/app/blocks/short-profile/short-profile.pug
+++ b/app/blocks/short-profile/short-profile.pug
@@ -2,3 +2,9 @@ mixin short-profile()
   +b.A.short-profile&attributes(attributes)
     +avatar('assets/images/ava.jpg').__avatar
     +e.name Spencer Macenthire
+
+mixin short-profile-host()
+  +b.A.short-profile&attributes(attributes)
+    +avatar('assets/images/ava2.jpg').__avatar
+    +e.name Ann Landrodia
+    +e.status host
