--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -57,6 +57,10 @@
             padding-left: 0;
           }
         }
+
+        &_no-ptop {
+          padding-top: 0;
+        }
       }
 
       &_wide-xl {
@@ -74,6 +78,10 @@
 
     &_ptop {
       padding-top: 110px;
+    }
+
+    &_no-ptop {
+      padding-top: 0;
     }
   }
 }
