--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -52,9 +52,11 @@ include ../blocks/social/social
 include ../blocks/socials/socials
 include ../blocks/space/space
 include ../blocks/spoiler/spoiler
+include ../blocks/switch/switch
 include ../blocks/table/table
 include ../blocks/tabs/tabs
 include ../blocks/text-list/text-list
+include ../blocks/tip/tip
 include ../blocks/transport-table/transport-table
 include ../blocks/transport-type/transport-type
 include ../blocks/travel-time/travel-time
