--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -3,6 +3,9 @@ extends ../../layouts/default-login
 block head
   - var pageTitle = 'SpacePool - Account settings'
 
+block header
+  -var headerClass = '_border'
+
 block content
   +content-origin._reverse
     .container
