--- a/app/pages/host-space-offers/host-space-offers.pug
+++ b/app/pages/host-space-offers/host-space-offers.pug
@@ -1,7 +1,10 @@
-extends ../../layouts/default-login
+extends ../../layouts/default-login-host
 
 block head
   - var pageTitle = 'SpacePool - My rental offers - One Space (HOST)'
+
+block header
+  -var headerClass = '_border'
 
 block content
   +content-origin._reverse
