--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -78,7 +78,16 @@ $color-available: #20cbca;
 $color-note: #c3cad3;
 $color-border-lighter: #e5e6e7;
 $color-active-menu: #81858c;
-$color-scroll-light-gray: #dfe4eb; // ##########
+$color-scroll-light-gray: #dfe4eb;
+$color-tip: #5a626d;
+$color-switcher-bg1: #e5e9e9;
+$color-switcher-border: #d3d8d8;
+$color-switcher-border-active: #3e454f;
+$color-basic-gray: #b0b7c1;
+$color-offer-disable: #798394;
+
+
+// ##########
 // Transitions
 // ##########
 $ease-main: .3s ease;
