--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -14,6 +14,10 @@
     @include screen('sm') {
       padding-left: 35px;
     }
+
+    &_small {
+      padding-left: 25px;
+    }
   }
 
   &_back {
