--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -1,3 +1,109 @@
 .page-header {
   $b: &;
+
+  display: block;
+  width: 100%;
+  padding: 37px 0 43px;
+
+  @include screen('sm') {
+    padding: 34px 0;
+  }
+
+  .container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  &__column {
+
+    &_main {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex: 1;
+      box-sizing: border-box;
+      padding-left: 50px;
+
+      @include screen('lg') {
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 100%;
+        flex: none;
+        padding-left: 0;
+      }
+
+      #{$b}_wide-xl & {
+        @include screen('xl') {
+          width: 100%;
+          flex: none;
+          padding-left: 0;
+        }
+      }
+    }
+
+    &_side {
+      width: 368px;
+      min-width: 368px;
+
+      @include screen('lg') {
+        width: 100%;
+      }
+
+      #{$b}_wide-xl & {
+        @include screen('xl') {
+          width: 100%;
+          flex: none;
+        }
+      }
+    }
+  }
+
+  &__title {
+    &:not(:last-child) {
+      margin-right: 48px;
+    }
+  }
+
+  &__info {
+    @include text-big;
+
+    line-height: (26/18);
+    font-weight: 700;
+    color: $color-basic-light;
+
+    @include screen('lg') {
+      width: 100%;
+      order: 2;
+    }
+
+    @include screen('sm') {
+      @include text15;
+
+      line-height: (26/15);
+      order: inherit;
+    }
+
+    b {
+      color: $color-basic;
+    }
+
+    &:not(:last-child) {
+      margin-right: 50px;
+
+      @include screen('sm') {
+        margin-right: 0;
+      }
+    }
+  }
+
+  &__button {
+    margin-left: auto;
+    min-width: 278px;
+
+    @include screen('sm') {
+      margin-left: 0;
+      width: 100%;
+    }
+  }
 }
