--- a/app/layouts/default-login-host.pug
+++ b/app/layouts/default-login-host.pug
@@ -4,10 +4,10 @@ include _internalIncludes
 doctype html
 html(lang='en')
   include head
-  body.is-panel
+  body.is-login
     block header
     - var addClass = headerClass || ''
-    +header()(class=addClass)
+    +header(true)(class=addClass + ' is-login')
 
     +b.MAIN.page
       block content
@@ -18,7 +18,7 @@ html(lang='en')
     +overlay
     +user-menu-panel
     block panels
-    +footer._panel-padding
+    +footer
     script(src='assets/scripts/libs/object-assign-auto.min.js')
     script(src='assets/scripts/app.min.js')
     script(src='assets/scripts/main.js')
