--- a/app/layouts/default-with-mobile-panel-login.pug
+++ b/app/layouts/default-with-mobile-panel-login.pug
@@ -5,7 +5,9 @@ doctype html
 html(lang='en')
   include head
   body.is-panel.is-login
-    +header.is-login
+    block header
+    - var addClass = headerClass || ''
+    +header()(class=addClass + ' is-login')
 
     +b.MAIN.page
       block content
