short-profile for host

--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -72,6 +72,10 @@
       width: 13px;
       height: 13px;
 
+      @include screen('sm') {
+        left: 18px;
+      }
+
       &::before,
       &::after {
         @include pseudo;
@@ -120,6 +124,10 @@
     #{$b}__text {
       padding-left: 55px;
       padding-right: 38px;
+
+      @include screen('sm') {
+        padding-left: 38px;
+      }
     }
   }
 
