--- a/app/blocks/header-user/header-user.scss
+++ b/app/blocks/header-user/header-user.scss
@@ -21,6 +21,16 @@
         margin-right: 0;
       }
     }
+
+    &_host {
+      &:not(:last-child) {
+        margin-right: 74px;
+
+        @include screen('lg') {
+          margin-right: 0;
+        }
+      }
+    }
   }
 
   &__list {
