--- a/app/blocks/short-profile/short-profile.scss
+++ b/app/blocks/short-profile/short-profile.scss
@@ -34,4 +34,34 @@
       color: $color-basic-dark;
     }
   }
+
+  &__status {
+    @include text-small;
+
+    line-height: 1;
+    padding: 2px 3px 1px;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-color: $color-basic;
+    color: $color-white;
+    align-self: center;
+    display: block;
+    margin-left: 11px;
+    position: relative;
+    box-sizing: border-box;
+
+    @include screen('sm') {
+      display: none;
+    }
+
+    &::after {
+      @include pseudo;
+
+      top: 100%;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-image: linear-gradient(to right, $color-hot-desk 25%, $color-dedicated-desk 25%, $color-dedicated-desk 50%, $color-meeting-room 50%, $color-meeting-room 75%, $color-office-space 75%);
+    }
+  }
 }
