--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -5,8 +5,12 @@
   width: 100%;
   padding: 37px 0 43px;
 
+  @include screen('lg') {
+    padding: 34px 0 30px;
+  }
+
   @include screen('sm') {
-    padding: 34px 0;
+    padding: 32px 0 28px;
   }
 
   .container {
@@ -75,6 +79,7 @@
     @include screen('lg') {
       width: 100%;
       order: 2;
+      margin-top: 10px;
     }
 
     @include screen('sm') {
@@ -82,6 +87,7 @@
 
       line-height: (26/15);
       order: inherit;
+      margin-top: 3px;
     }
 
     b {
@@ -104,6 +110,7 @@
     @include screen('sm') {
       margin-left: 0;
       width: 100%;
+      margin-top: 20px;
     }
   }
 }
