--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -291,6 +291,9 @@ block content
             +ui-description .checkbox:disabled или .checkbox.is-disabled
             +inputbox()
               +checkbox('ui-checkbox', 'test', true).is-disabled Чекбокс отключеный
+            +ui-description .checkbox._border
+            +inputbox()
+              +checkbox('ui-checkbox', 'test', true)._border Чекбокс подчеркнутый
           +col(6)
             +ui-description .checkradio
             +inputbox()
@@ -307,6 +310,12 @@ block content
               +ui-elements-list
                 +radio('ui-radio2', 'test', true).is-disabled Радиокнопка
                 +radio('ui-radio2', 'test-2').is-disabled Радиокнопка
+            +ui-description .checkradio._border
+            +inputbox()
+              +radio('ui-radio2', 'test', true)._border Радиокнопка подчеркнутая
+              br
+              br
+              +radio('ui-radio2', 'test-2')._border Радиокнопка подчеркнутая
           +col(6)
             +ui-description .range.js-range<br> Все параметры задаются дата-атрибутами
             +inputbox()
@@ -651,6 +660,8 @@ block content
       +ui-section-content
         +ui-description .short-provile
         +short-profile
+        +ui-description .short-provile host
+        +short-profile-host
 
     //- User link
     +ui-section
