--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -57,10 +57,6 @@
             padding-left: 0;
           }
         }
-
-        &_no-ptop {
-          padding-top: 0;
-        }
       }
 
       &_wide-xl {
@@ -82,6 +78,10 @@
 
     &_no-ptop {
       padding-top: 0;
+
+      #{$b}_reverse & {
+        padding-top: 0;
+      }
     }
   }
 }
