space-offer block full html + base styles for all devices

--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -280,4 +280,34 @@
       }
     }
   }
+
+  &_square {
+    border-radius: 0;
+
+    #{$b}__text {
+      padding-left: 16px;
+      padding-right: 16px;
+      border-radius: 0;
+    }
+
+    &::before {
+      border-radius: 0;
+    }
+
+    &#{$b}_border {
+
+      #{$b}__text {
+        padding-left: 13px;
+        padding-right: 13px;
+      }
+    }
+
+    &#{$b}_thin-border {
+
+      #{$b}__text {
+        padding-left: 14px;
+        padding-right: 14px;
+      }
+    }
+  }
 }
