--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -201,6 +201,27 @@
     }
   }
 
+  &_dark2 {
+    #{$b}__button {
+      width: 21px;
+      height: 50px;
+      background-color: rgba($color-hint-bg, .5);
+      transition: background $ease-main;
+      padding-left: 0;
+
+      &:hover {
+        background-color: rgba($color-grey-dark, .7);
+      }
+
+      &-icon {
+        width: 9px;
+        height: 24px;
+        fill: $color-white;
+        filter: drop-shadow(1px 1px 0 rgba(34, 42, 46, .2));
+      }
+    }
+  }
+
   &_gallery {
 
     #{$b}__container {
@@ -229,6 +250,16 @@
 
       &.swiper-slide-active {
         opacity: 1;
+      }
+    }
+
+    &_inner {
+
+      #{$b}__buttons {
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        left: 0;
       }
     }
   }
