--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -24,6 +24,7 @@ include ../blocks/form/form
 include ../blocks/grid/grid
 include ../blocks/header-menu/header-menu
 include ../blocks/header-user/header-user
+include ../blocks/hint/hint
 include ../blocks/icon/icon
 include ../blocks/info-price/info-price
 include ../blocks/link/link
@@ -35,6 +36,7 @@ include ../blocks/news/news
 include ../blocks/note/note
 include ../blocks/offer-info/offer-info
 include ../blocks/offer-item/offer-item
+include ../blocks/offer-list/offer-list
 include ../blocks/offer-select/offer-select
 include ../blocks/overlay/overlay
 include ../blocks/page-title/page-title
@@ -52,6 +54,7 @@ include ../blocks/social/social
 include ../blocks/socials/socials
 include ../blocks/space/space
 include ../blocks/spoiler/spoiler
+include ../blocks/status/status
 include ../blocks/switch/switch
 include ../blocks/table/table
 include ../blocks/tabs/tabs
