--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -196,6 +196,8 @@ block content
           +button('button')(href="#" disabled) .button:disabled
           +button-plus()(href="#") .button_icon._plus
           +button-icon('', 'select-arrow')(href="#") .button_icon
+          +button()(href="#")._square .button_square
+          +button()(href="#")._border._square .button_border._square
         +ui-description При клике на .js-anchor происходит скролл к элементу из атрибута href. Блок: blocks/js-functions/anchor.js
         +button()(href="#section0").js-anchor .js-anchor
         +ui-description При клике на .js-freeze скролл страницы блокируется, на .js-unfreeze разблокируется. Блок: blocks/js-functions/freeze.js. Функции freeze() и unfreeze() можно импортировать и использовать в модалках, бургере или где-то еще
@@ -1037,6 +1039,15 @@ block content
         +ui-description .switch с описанием
         +switch('swtich', 'switch1', 'checked', true) from
           +e.SPAN.price <b>&pound;730</b> pm
+
+    //- Tip
+    +ui-section
+      +ui-section-head
+        h2 tip
+        p Блок: block/tip
+      +ui-section-content
+        +ui-description .tip
+        +tip One rental space may contain more than one Rental Offer. <b>First you need to create an rental space, than you will be able to add rental offer such as Dedicated Desks, Meeting Rooms, Office spaces and Hot desks.</b>
 
 block panels
   +main-menu
