--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -85,6 +85,8 @@ $color-switcher-border: #d3d8d8;
 $color-switcher-border-active: #3e454f;
 $color-basic-gray: #b0b7c1;
 $color-offer-disable: #798394;
+$color-hint-bg: #151b25;
+$color-gray-lighter: #959fad;
 
 
 // ##########
